# rv1106-pico-zero-npu

./: .gitignore  PROJECT_SUMMARY.md  README.md  项目交接文档.md
docs/: CSI线序与引脚定义.md  GC2093完整配置指南.md  GC2093驱动与IQ获取指南.md  Linux基础与系统配置.md  NFS挂载配置.md  RKMPI多媒体处理指南.md  RKNN神经网络推理指南.md  SDK编译指南.md  opencv-mobile使用指南.md  外设与接口.md  宠物喂食器技术方案.md  常见问题FAQ.md  开发任务计划.md  烧录官方固件详细步骤.md  登录与文件传输.md  硬件参数规格书.md  资料下载索引.md  镜像烧录指南.md
log/: log2026-07-08.txt  log2026-07-10.txt
pet-feeder-monitor/: config.py  main.py  mqtt_client.py  overlay.py  preview_demo.py  requirements.txt  video_stream.py  开发文档.md
rv1106-feeder/: CMakeLists.txt  README.md  build.sh
rv1106-feeder/include/: business_logic.h  food_detector.h  mqtt_client.h  reid_module.h  rknn_detector.h  rtsp_server.h  uart_comm.h  video_stream.h
rv1106-feeder/src/: business_logic.cpp  food_detector.cpp  gc2093_test.cpp  main.cpp  mqtt_client.cpp  reid_module.cpp  rknn_detector.cpp  rtsp_server.cpp  uart_comm.cpp  video_stream.cpp
scripts/: README.md  check_camera_support.sh  fix_gc2093_boot.py
tools/: README.md  deploy.sh  device_info.py  install_service.sh  monitor.py  start_device.sh  test_mqtt.py  test_rtsp.py
tools/model_conversion/: README.md  convert_mobilenet.py  convert_reid.py  convert_yolov5n.py  requirements.txt
